Scaffolding complete. need to continue on step "Departments" of phase 3 "Manually add at least one department to database"

--- a/LMS_handout/LMS/appsettings.json
+++ b/LMS_handout/LMS/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=atr.eng.utah.edu;Database=TeamXLMSUsers;Uid=user;Pwd=pwd"
+    "IdentityConnection": "Server=atr.eng.utah.edu;Database=Team59LMSUsers;Uid=u1088799;Pwd=MySQL1234"
   },
   "Logging": {
     "IncludeScopes": false,
